--- a/view/search.html
+++ b/view/search.html
@@ -2,10 +2,17 @@
     ابحث: <input name="regex_input" ng-trim="false" ng-keyup="$event.keyCode == 13 && searchButtonClicked()"
                  type="text" class="search-input" ng-model="regex_query"/>
     <button ng-click="searchButtonClicked()">ابحث</button>
-    <button ng-click="regex_query = regex_query + 'ََ'">إضافة فتحة</button>
-    <button ng-click="regex_query = regex_query + 'ِ'">إضافة كسرة</button>
-    <button ng-click="regex_query = regex_query + 'َُ'">إضافة ضمة</button>
-    <button ng-click="regex_query = regex_query + 'ّ'">إضافة شدة</button>
+    <div id="input-options">
+        <h3>إضافة:</h3>
+        <button ng-click="regex_query = regex_query + 'ـ'">أي حرف</button>
+        <button ng-click="regex_query = regex_query + '.'">حرف أو أكثر</button>
+        <button ng-click="regex_query = regex_query + '..'">كلمة أو أكثر</button>
+        <br>
+        <button ng-click="regex_query = regex_query + 'َ'">فتحة</button>
+        <button ng-click="regex_query = regex_query + 'ِ'">كسرة</button>
+        <button ng-click="regex_query = regex_query + 'َُ'">ضمة</button>
+        <button ng-click="regex_query = regex_query + 'ّ'">شدة</button>
+    </div>
 
     <!--<br>-->
     <!--ضمن النتائج: <input name="company" type="text" class="search-input" ng-model="query"/>-->
