--- a/view/search.html
+++ b/view/search.html
@@ -15,6 +15,7 @@
         <button ng-click="appendToCurrentTypingCursor(KASRA)">كسرة</button>
         <button ng-click="appendToCurrentTypingCursor(DAMMA)">ضمة</button>
         <button ng-click="appendToCurrentTypingCursor(SHADDA)">شدة</button>
+        <button ng-click="appendToCurrentTypingCursor(SUKUN)">سكون</button>
     </div>
 
     <!--<br>-->
