--- a/view/search.html
+++ b/view/search.html
@@ -7,9 +7,9 @@
     </div>
     <div id="input-options">
         <h3>إضافة:</h3>
-        <button ng-click="appendToCurrentTypingCursor('ـ')">أي حرف</button>
-        <button ng-click="appendToCurrentTypingCursor('.')">حرف أو أكثر</button>
-        <button ng-click="appendToCurrentTypingCursor('..')">كلمة أو أكثر</button>
+        <button ng-click="appendToCurrentTypingCursor('ـ')">أي حرف (ـ)</button>
+        <button ng-click="appendToCurrentTypingCursor('.')">حرف أو أكثر (.)</button>
+        <button ng-click="appendToCurrentTypingCursor('..')">   كلمة أو أكثر (..)</button>
         <br>
         <button ng-click="appendToCurrentTypingCursor(FATHA)">فتحة</button>
         <button ng-click="appendToCurrentTypingCursor(KASRA)">كسرة</button>
