--- a/style.css
+++ b/style.css
@@ -29,12 +29,61 @@ body {
     border-bottom: thin solid rgb(218, 218, 218);
 }
 
+input[type=text] {
+    height: 1.2em;
+    text-indent: 0.5em;
+    letter-spacing: 0.1em;
+    font-size: 1.1em;
+}
+
 /* show kasrah */
-input[type=text]{
+input[type=text].search-input{
     height: 1.3em;
     text-indent: 0.5em;
     letter-spacing: 0.1em;
     font-size: 1.6em;
+}
+
+nav#main-menu ul li {
+    display: inline-block;
+}
+
+nav#main-menu ul li a {
+    text-decoration: unset;
+    display: inline-block;
+    padding: 0.2em 0.4em;
+    background: #eee;
+    border-radius: 0.3em;
+    border: 1px solid #fff;
+}
+
+nav#main-menu ul li a:hover {
+    color: #412ede;
+    background: #fefefe;
+    border: 1px solid #ddd;
+}
+
+ul#suwar-list {
+    padding: 0.3em;
+    margin-top: 0;
+}
+
+ul#suwar-list a {
+    text-decoration: unset;
+    display: inline-block;
+    width: 100%;
+}
+
+ul#suwar-list li:hover {
+    background: #fff;
+    border: 1px solid #eee;
+}
+
+ul#suwar-list > li {
+    list-style: none;
+    padding: 0.2em;
+    background: #eee;
+    border: 1px solid #fff;
 }
 
 /** more **/
