--- a/style.css
+++ b/style.css
@@ -93,8 +93,8 @@ ul#suwar-list > li {
 }
 
 .highlightedText > .highlightedText {
-    color: #ec8000;
-    background: rgb(255 255 255 / 75%);
+    color: #6e1bca;
+    background: rgb(255 237 224 / 75%);
 }
 
 body{
