optionally update the url, to avoid resetting the filter list

--- a/view/search.html
+++ b/view/search.html
@@ -32,6 +32,8 @@
 <label for="hide-sidebar">خيارات البحث</label>
 
 <section class="left" style="border-right:1px">
+    <button ng-click="updateUrl()">تحديث الرابط</button>
+
     <div id="filter-settings">
         <h3>الترتيب</h3>
         <label for="sort-by-counts"><input type="radio" ng-model="sortBy" value="counts" id="sort-by-counts"> بالعدد</label>
