option to load all search results

--- a/view/search.html
+++ b/view/search.html
@@ -42,6 +42,8 @@
         <br>
         <h3>عدد التكرار</h3>
         <label for="update-counts-per-selections"><input type="checkbox" ng-model="changeCountsAsPerFilter" id="update-counts-per-selections">تغيير الأعداد بحسب الاختيارات؟ </label>
+        <h3>العرض التدريجي</h3>
+        <label for="show-all-search-results"><input type="checkbox" ng-model="showAllWords" id="show-all-search-results">عرض كل نتائج البحث دفعة واحدة؟ </label>
     </div>
     <div class="sidebar-title">
         <b>عدد الآيات
