--- a/view/search.html
+++ b/view/search.html
@@ -44,7 +44,7 @@
         <label for="update-counts-per-selections"><input type="checkbox" ng-model="changeCountsAsPerFilter" id="update-counts-per-selections">تغيير الأعداد بحسب الاختيارات؟ </label>
         <h3>العرض</h3>
         <label for="show-all-search-results"><input type="checkbox" ng-model="showAllWords" id="show-all-search-results">عرض كل نتائج البحث دفعة واحدة؟ </label><br>
-        <label for="show-only-selected-results"><input type="checkbox" ng-model="showOnlySelectedResults" id="show-only-selected-results">عرض قفط ما تم اختياره من نتائج البحث؟ </label>
+        <label for="show-only-selected-results"><input type="checkbox" ng-model="showOnlySelectedResults" id="show-only-selected-results">عرض فقط ما تم اختياره من نتائج البحث؟ </label>
     </div>
     <div class="sidebar-title">
         <b>عدد الآيات
