--- a/style.css
+++ b/style.css
@@ -472,3 +472,8 @@ h2 {
 .close-btn:hover {
     background-color: #a61f2c;
 }
+
+.large-symbol {
+    font-size: 1.7em;
+    line-height: 0.3em;
+}
