Enhanced the search functionality to allow finding more results, added a page for showing search features. Enhanced the UI. Added initial test.

--- a/view/header.html
+++ b/view/header.html
@@ -2,8 +2,9 @@
 <header>
     <nav id="main-menu">
         <ul>
-            <li><a href="#!/surah">القرآن</a></li>
-            <li><a href="#!/search">البحث</a></li>
+            <li><a href="#!/surah">تصفح القرآن الكريم</a></li>
+            <li><a href="#!/search">البحث في القرآن</a></li>
+            <li><a href="#!/search-features">مميزات البحث</a></li>
         </ul>
     </nav>
 </header>
