--- a/style.css
+++ b/style.css
@@ -1,32 +1,263 @@
+
 body {
-    font-size: 1.3em;
+    font-family: 'Noto Sans Arabic', sans-serif;
+    font-size: 1em;
+    margin: 0;
+    /*background: rgb(244, 244, 244);*/
+}
+
+div, section, header, main {
+    box-sizing: border-box;
+}
+
+header {
+    /*background: #fff;*/
+}
+
+h1 {
+    margin: 0.2em 0;
+}
+
+button, input {
+    font-family: 'Noto Sans Arabic', sans-serif;
+}
+
+#main-container {
+    width: 100%;
+    padding: 1em;
+    display: block;
+    background: #769fb8;
+    box-sizing: border-box;
+    box-shadow: inset 0 0 19px 3px #487ea3;
+    margin: auto;
 }
 
 .left {
-    display:      inline;
-    float:        right;
+    display: inline-block;
+    /* float:        right; */
     /*margin-left:  10px;*/
     /*margin-right: 10px;*/
-    width:        20%;
+    width: 260px;
+    float: left;
 }
-.right{
-    display:      inline;
-    float:        right;
-    /*margin-left:  10px;*/
-    /*margin-right: 10px;*/
-    width:        80%;
+
+.right {
+    display: inline;
+    float: right;
+    /* margin-left:  10px; */
+    /* margin-right: 10px; */
+    width: calc(100% - 260px);
+    padding: 0 10px;
+    box-sizing: border-box;
 }
+
 .top {
-    padding-bottom: 10px;
     border-bottom: thick solid rgb(11, 112, 178);
+    padding: 1em;
+    background: rgb(109 159 219);
+    background: linear-gradient(180deg, rgb(85 133 191) 0%, rgb(192 212 218) 74%, rgba(202, 227, 221, 1) 100%);
 }
+
+/* Section Styles */
 .left {
     /*margin:5px;*/
-    border-right: thin solid gray;
+    box-sizing: border-box;
 }
+
+.sidebar-border {
+    border: 1px #e2e2e2 solid;
+}
+
+/* Input Styles */
+input[type="text"].full-width {
+    width: 100%;
+    padding: 1em;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+#suwar-list-container {
+    overflow-y: auto;
+    height: 300px;
+}
+
+/* List Styles */
+#suwar-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+ul#suwar-list a {
+    text-decoration: unset;
+    border: 1px solid #d7cfcf;
+    padding: 4px 8px;
+}
+
+ul#suwar-list > li {
+    display: inline-block;
+    margin: 4px;
+}
+
+section#surah p {
+    margin: 0.4em 0;
+    font-size: 1.1em;
+    display: inline;
+}
+
+section#surah h2 + p {
+    display: inline;
+}
+
+section#surah h2 + p::after {
+    content: " ";
+    display: block;
+}
+
+/* Link Styles */
+.surah-link {
+    display: block;
+    padding: 0.3em;
+    text-decoration: none;
+    color: #333;
+    transition: box-shadow 0.3s;
+    margin: 0.1em 0;
+    border-radius: 8px;
+    background: #fff;
+    border: 1px solid rgba(65, 88, 129, 0.31);
+}
+
+.surah-link:hover {
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.07);
+}
+
+section#surah, section#search-features {
+    padding: 1em;
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    text-align: justify;
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.07);
+    margin: 1em auto;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background: #fff;
+}
+
+#search-container, #top-container {
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 15px;
+    background-color: #f4f4f4;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.explanation {
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.example {
+    margin-left: 20px;
+    color: #496fb0;
+}
+
+.search-input-highlight {
+    background-color: #fff9b9;
+    padding: 2px;
+    border-radius: 3px;
+}
+
+/* Add styles for the search input */
+a.search-input-highlight {
+    display: inline-block;
+    position: relative;
+    padding: 0px 6px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s ease-in-out, padding-left 0.3s ease-in-out;
+    line-height: 1.7em;
+    margin-bottom: 0.3em;
+}
+
+/* Add hover effect to highlight the search input */
+a.search-input-highlight:hover {
+    background-color: #f5f5f5;
+}
+
+.pull-left {
+    float: left;
+}
+
+div#empty-search-results {
+    width: 800px;
+    background: #eee;
+    margin: 0 auto;
+    padding: 1em;
+    border-radius: 8px;
+    max-width: 90%;
+}
+
+.search-header {
+    margin-bottom: 15px;
+}
+
+h3 {
+    color: #333;
+}
+
+.description {
+    color: #555;
+}
+
+button {
+    color: #fff;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.search-input {
+    display: flex;
+    margin-bottom: 15px;
+}
+
+#search-input {
+    flex: 1;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.search-options label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.search-options input {
+    margin-right: 5px;
+}
+
 .filter {
-    margin:10px;
+    margin: 10px;
     border-bottom: thin solid rgb(218, 218, 218);
+    background: #f0f0f0;
+    padding: 1em;
+    border-radius: 8px;
+    width: calc(50% - 20px);
+    min-width: 240px;
+    float: right;
+    box-sizing: border-box;
 }
 
 input[type=text] {
@@ -36,12 +267,16 @@ input[type=text] {
     font-size: 1.1em;
 }
 
+input[type=text]::placeholder {
+    letter-spacing: 0;
+}
+
 /* show kasrah */
-input[type=text].search-input{
+input[type=text]#search-input {
     height: 1.3em;
     text-indent: 0.5em;
-    letter-spacing: 0.1em;
-    font-size: 1.6em;
+    letter-spacing: 0.1em !important;
+    font-size: 1.3em;
 }
 
 nav#main-menu ul li {
@@ -51,40 +286,63 @@ nav#main-menu ul li {
 nav#main-menu ul li a {
     text-decoration: unset;
     display: inline-block;
-    padding: 0.2em 0.4em;
-    background: #eee;
-    border-radius: 0.3em;
+    padding: 0.2em 0.6em;
+    background: #fff;
+    border-radius: 8px;
     border: 1px solid #fff;
+    color: #444;
+    margin-left: 8px;
+    transition: box-shadow 0.3s;
 }
 
 nav#main-menu ul li a:hover {
-    color: #412ede;
-    background: #fefefe;
+    color: #141a79;
+    background: #ffffff;
     border: 1px solid #ddd;
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.07);
 }
 
-ul#suwar-list {
-    padding: 0.3em;
-    margin-top: 0;
+nav#main-menu ul li a:visited {
+    color: #333;
 }
+
+nav#main-menu ul li a:visited {
+    color: #333;
+}
+
+nav#main-menu {
+    width: 800px;
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+
+nav#main-menu ul {
+    padding: 0;
+}
+
+/*ul#suwar-list {*/
+/*    padding: 0.3em;*/
+/*    margin-top: 0;*/
+/*}*/
 
 ul#suwar-list a {
     text-decoration: unset;
-    display: inline-block;
-    width: 100%;
+    /*display: inline-block;*/
+    /*width: 100%;*/
 }
 
-ul#suwar-list li:hover {
-    background: #fff;
-    border: 1px solid #eee;
-}
+/*ul#suwar-list li:hover {*/
+/*    background: #a4cbca;*/
+/*    border: 1px solid #eee;*/
+/*}*/
 
-ul#suwar-list > li {
-    list-style: none;
-    padding: 0.2em;
-    background: #eee;
-    border: 1px solid #fff;
-}
+/*ul#suwar-list > li {*/
+/*    list-style: none;*/
+/*    padding: 0.2em;*/
+/*    background: #eee;*/
+/*    border: 1px solid #fff;*/
+/*}*/
 
 /** more **/
 .highlightedText {
@@ -93,94 +351,135 @@ ul#suwar-list > li {
 }
 
 .highlightedText > .highlightedText {
-    color: #6e1bca;
+    color: #e30505;
     background: rgb(255 237 224 / 75%);
 }
 
-body{
+body {
     direction: rtl;
 }
 
-.ayah-source{
+.ayah:hover {
+    background: #fcff98a8;
+    text-shadow: 0 0 2px white;
+}
+
+.ayah-source {
     display: block;
     font-size: 0.8em;
     margin-top: 0.4em;
 }
 
 .link {
-    color: #1100ff;
+    color: #0564a1;
     cursor: pointer;
 }
 
-#data-list > li{
+.link:hover {
+    color: #0d7fc9;
+}
+
+#data-list > li {
     list-style: none;
     padding: 0.1em 0.8em;
 }
 
 #data-list > li:nth-child(2n) {
-    background: #ececec;
+    background: #f8f8f8;
 }
 
 #data-list {
-    background: #e0e0e0;
-    border: 1px solid #eee;
+    background: #ffffff;
+    border: 1em solid #eee;
     padding: 0;
+    border-radius: 8px;
+    margin-top: 10px;
 }
 
-.pagination{
+.pagination {
     direction: ltr;
 }
 
 .pagination a {
     display: inline-block;
-    padding: 10px;
-    border-radius: 5px;
-    color: #aaa;
+    border-radius: 8px;
+    color: #777;
+    padding: 0.1em 0.6em;
     font-size: .875em;
+    min-width: 2.4em;
+    min-height: 2.4em;
+    text-align: center;
+    box-sizing: border-box;
+}
 
+.pagination .active a {
+    color: #ddd;
+}
+
+.pagination li.disabled a {
+    cursor: not-allowed;
 }
 
 .pagination ul {
     list-style: none;
-    margin:1em;
+    margin: 0;
     padding: 0;
 }
 
 .pagination li {
     float: left;
-
     display: none;
     padding: 0px;
-    margin-right: 4px;
+    margin-right: 8px;
     margin-bottom: 10px;
-    border-radius: 3px;
-    border: solid 1px #c0c0c0;
+    border-radius: 8px;
+    border: solid 1px #eeeeee;
     background: #e9e9e9;
-    box-shadow: inset 0px 1px 0px rgba(255,255,255, .8), 0px 1px 3px rgba(0,0,0, .1);
+    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, .8), 0px 1px 3px rgba(0, 0, 0, .1);
     font-size: .875em;
     font-weight: bold;
     text-decoration: none;
     color: #717171;
-    text-shadow: 0px 1px 0px rgba(255,255,255, 1);
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
 }
 
-.pagination li.active{
+.pagination li.active {
     border: none;
-    background: #616161;
-    box-shadow: inset 0px 0px 8px rgba(0,0,0, .5), 0px 1px 0px rgba(255,255,255, .8);
+    background: #637c8b;
+    box-shadow: inset 0px 0px 8px rgba(0, 0, 0, .5), 0px 1px 0px rgba(255, 255, 255, .8);
     color: #f0f0f0;
-    text-shadow: 0px 0px 3px rgba(0,0,0, .5);
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, .5);
 }
 
-.pagination li:nth-child(-n+5){
+.pagination li:nth-child(-n+5) {
 
 }
 
-.pagination li:nth-child(-n+5)
-,.pagination li:nth-child(10n+1)
-,.pagination li:nth-last-child(-n+5)
-,.pagination li.show{
+.pagination li:nth-child(-n+5), .pagination li:nth-child(10n+1), .pagination li:nth-last-child(-n+5), .pagination li.show {
     display: inline-block;
+}
+
+.scroll-container {
+    /* Your existing styles for the scroll container */
+    overflow-y: auto;
+    position: relative; /* Ensure positioning context for the shadow element */
+}
+
+.scroll-shadow {
+    /* Styles for the fixed shadow element */
+    margin-top: -1em; /* Move up by the height of the shadow */
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 1em; /* Adjust as needed for the height of the shadow */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%); /* Use gradient for a fading effect */
+    pointer-events: none; /* Allow clicking through the shadow element */
+    z-index: 1; /* Ensure it appears above the content */
+    opacity: 0; /* Initially set to be invisible */
+}
+
+.scroll-shadow.has-shadow {
+    opacity: 1; /* Make the shadow visible when needed */
 }
 
 /*toggle sidebar*/
@@ -188,6 +487,7 @@ body{
 #hide-sidebar {
     display: none;
 }
+
 #hide-sidebar:checked ~ section.left {
     display: none;
 }
@@ -196,11 +496,12 @@ body{
     width: 100%;
 }
 
-[for="hide-sidebar"]:hover{
+[for="hide-sidebar"]:hover {
     color: #b80c26;
     background: #ddd;
 }
-[for="hide-sidebar"]{
+
+[for="hide-sidebar"] {
     cursor: pointer;
     display: inline-block;
     margin: 10px 10px 0;
@@ -210,68 +511,73 @@ body{
     border-radius: 15px;
 }
 
-.btn{
+.btn {
     cursor: pointer;
     display: inline-block;
     color: #006d9d;
     background: #eeeeee;
-    border-radius: 2px;
-    padding:3px 6px;
+    border-radius: 8px;
+    padding: 3px 6px;
 }
 
 
-.btn:hover{
+.btn:hover {
     color: #007bae;
-    background: #dddddd;
+    background: #ffffff;
 }
 
 /**
 * filters options
 */
 /*limit the size*/
-.filter > div {
+.filter > div.scroll-container {
     height: 10.5em;
     overflow-x: scroll;
     margin: 0.5em 0;
     /*add border*/
-    border:1px solid #f8f8f8;
+    border: 1px solid #f8f8f8;
+    background: #ffffff;
+    position: relative;
 }
 
-.filter > div > div {
+.filter > div.scroll-container > div {
     padding: 0.3em;
 }
 
-.filter > div > div:nth-child(2n+1) {
+.filter > div.scroll-container > div:nth-child(2n+1) {
     color: #444;
 }
 
-.filter > div > div:nth-child(2n){
+.filter > div.scroll-container > div:nth-child(2n) {
     background: #f8f8f8;
 }
 
-.filter--title{
+.filter--title {
     color: #b80c26;
 }
 
-.sidebar-title{
+.sidebar-title {
     background: #eee;
     padding: 4px 6px;
     margin: 10px;
-    border: 1px solid rgb(11, 112, 178);
     text-align: center;
+    border-radius: 8px;
+}
+
+.buttons-with-spacing button {
+    margin: 0.25em 0.15em;
 }
 
 button {
     padding: 0.45em 20px;
-    margin: 0.25em 0.15em;
-    vertical-align: bottom;
-    border: 1px solid #9d9d9d;
+    vertical-align: middle;
+    border: 1px solid #9d9d9d8a;
     font-size: 0.8em;
-    background: #ccc;
+    background: #1f5198;
 }
 
 button:hover {
-    background: #fff;
+    background: #1c58c5;
     cursor: pointer;
 }
 
@@ -285,8 +591,9 @@ div#search-input-container {
     vertical-align: bottom;
 }
 
-div#input-options {
+div#input-options, #examples-container {
     display: inline-block;
+    width: 100%;
     margin: 0.15em;
     border: 1px solid #cacaca;
     border-radius: 0.4em;
@@ -299,20 +606,29 @@ h3 {
     margin: 0.35em 0;
 }
 
+#search-input::placeholder {
+    letter-spacing: 0;
+}
+
+#search-input {
+    letter-spacing: 1px !important; /* Adjust the value as needed */
+}
+
 @media screen and (max-width: 800px) {
-    section.left, section.right{
+    section.left, section.right {
         width: 100%;
+        position: relative;
     }
 
 }
 
 @media screen and (max-width: 400px) {
-    input[type="text"].search-input{
+    input[type="text"].search-input {
         margin-bottom: 7px;
         height: 2em;
     }
 
-    .search-input, .search-input + button{
+    .search-input, .search-input + button {
         width: 100%;
         box-sizing: border-box;
     }
@@ -374,8 +690,10 @@ h3 {
     background-color: #ffffff; /* White background */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Shadow effect */
 }
+
 h2 {
-    color: #007BFF; /* Blue heading */
+    color: #0e5aac; /* Blue heading */
+    margin: 0.3em 0;
 }
 
 .example {
@@ -415,9 +733,10 @@ h2 {
     padding: 20px;
     border: 1px solid #ccc;
     z-index: 1;
-    width: 300px;
+    width: 500px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 90%;
 }
 
 .input-container {
@@ -431,6 +750,7 @@ h2 {
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 5px;
+    height: 2em;
 }
 
 .remove-input {
@@ -446,7 +766,7 @@ h2 {
 }
 
 .confirm-btn {
-    background-color: #28A745;
+    background-color: #1d4d91;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -456,11 +776,11 @@ h2 {
 }
 
 .confirm-btn:hover {
-    background-color: #1c8534;
+    background-color: #1b5cb9;
 }
 
 .close-btn {
-    background-color: #dc3545;
+    background-color: #5a5f74;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -470,10 +790,23 @@ h2 {
 }
 
 .close-btn:hover {
-    background-color: #a61f2c;
+    background-color: #586ba6;
 }
 
 .large-symbol {
     font-size: 1.7em;
     line-height: 0.3em;
+    height: 1.5em;
+    min-width: 1.5em;
+    padding: 0.4em;
+}
+
+#main-container::after {
+    content: " ";
+    clear: both;
+    display: block;
+}
+
+.pagination li:hover:not(.active) {
+    background: #ffffff;
 }
