--- a/view/search.html
+++ b/view/search.html
@@ -16,7 +16,7 @@
 <!--            <button ng-click="openPopup()">للبحث ضمن اختيارات</button>-->
         </div>
 
-        <div class="search-input">
+        <div class="search-input fix-height">
             <input id="search-input" name="regex_input" ng-trim="false"
                    ng-keyup="$event.keyCode == 13 && searchButtonClicked()"
                    type="text" ng-model="userSearchQuery" placeholder="أدخل الكلمة المراد البحث عنها"/>
