help section moved with minor modification

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ section#surah, section#search-features {
 
 .example {
     margin-left: 20px;
-    color: #496fb0;
+    color: #56595e;
 }
 
 .search-input-highlight {
