modified (.) to match at least letter, added (*) to match zero or more letters. Depending on the constants letters and harakat to match (.) and (*)

--- a/view/search.html
+++ b/view/search.html
@@ -106,6 +106,7 @@
             </div>
             <button ng-click="appendToCurrentTypingCursor('ـ')">أي حرف بأي حركة (ـ)</button>
             <button ng-click="appendToCurrentTypingCursor('.')">حرف أو أكثر ضمن كلمة (.)</button>
+            <button ng-click="appendToCurrentTypingCursor('*')">حرف أو أكثر في حال وجوده (*)</button>
             <button ng-click="appendToCurrentTypingCursor(' . ')">أي كلمة ( . )</button>
             <button ng-click="appendToCurrentTypingCursor('..')"> كلمة أو أكثر (..)</button>
             <button ng-click="appendToCurrentTypingCursor(ANY_SINGLE_LETTER + FATHA)">أي حرف مفتوح</button>
